--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-bootstrap-datetimepicker": "0.0.22",
+    "react-calendar": "^2.19.2",
     "react-date-picker-cs": "^0.1.28",
     "react-datetime-picker": "^2.8.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
+    "react-window-size": "^1.2.2",
     "resolve": "1.6.0",
     "url-loader": "0.6.2"
   },
