Change name key in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teamNotiphy-client",
+  "name": "team-notiphy-client",
   "homepage": "https://ghood97.github.io/TeamNotiphy-client",
   "version": "0.1.0",
   "private": true,
